refactor(dev): simplify local automation and document .dev layout